--- a/exo1/bower.json
+++ b/exo1/bower.json
@@ -7,7 +7,8 @@
   "private": true,
   "dependencies": {
     "angular": "1.2.x",
-	"angular-route": "1.2.x",
-	"angucomplete-alt": "1.0.1"
+    "angular-route": "1.2.x",
+    "angucomplete-alt": "1.0.1",
+    "es5-shim": "4.3.1"
   }
 }
