--- a/exo1/bower.json
+++ b/exo1/bower.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "angular": "1.2.x",
     "angular-route": "1.2.x",
+    "angular-resource": "~1.3.x",
     "angucomplete-alt": "1.0.1",
     "es5-shim": "4.3.1"
   }
